Factors test commented out