@@ -16,11 +16,11 @@ class RestPrimeFactorServiceTests {
     @Autowired
     private RestPrimeFactorService restPrimeFactorService;
 
-    private int PRIME_NUMBER = 20;
-    private List<Integer> PRIME_FACTOR_LIST = Arrays.asList(1,2,5);
+    private final int PRIME_NUMBER = 20;
+    private final List<Integer> PRIME_FACTOR_LIST = Arrays.asList(1,2,5);
 
-    private int NEGATIVE_PRIME_NUMBER = -1;
-    private List<Integer> NEGATIVE_PRIME_FACTOR_LIST = Arrays.asList();
+    private final int NEGATIVE_PRIME_NUMBER = -1;
+    private final List<Integer> EMPTY_PRIME_FACTOR_LIST = List.of();
 
 
     @Test
@@ -40,8 +40,30 @@ class RestPrimeFactorServiceTests {
         assertThat(listOfFactors, is(not(nullValue())));
 
         //Correct value check
-        assertThat(listOfFactors, is(equalTo(NEGATIVE_PRIME_FACTOR_LIST)));
+        assertThat(listOfFactors, is(equalTo(EMPTY_PRIME_FACTOR_LIST)));
     }
+
+
+    @Test
+    void testZeroGetFactor(){
+        List<Integer> listOfFactors = restPrimeFactorService.factor(0);
+        //Null Checks
+        assertThat(listOfFactors, is(not(nullValue())));
+
+        //Correct value check
+        assertThat(listOfFactors, is(equalTo(EMPTY_PRIME_FACTOR_LIST)));
+    }
+    @Test
+    void testOneGetFactor(){
+        List<Integer> listOfFactors = restPrimeFactorService.factor(1);
+
+        //Null Checks
+        assertThat(listOfFactors, is(not(nullValue())));
+
+        //Correct value check
+        assertThat(listOfFactors, is(equalTo(EMPTY_PRIME_FACTOR_LIST)));
+    }
+
 
 
 
